fix unread badge overlap

--- a/src/stylesheets/unread-badge.less
+++ b/src/stylesheets/unread-badge.less
@@ -12,6 +12,7 @@
 #sk-messenger-button {
     .unread-badge {
         position: absolute;
+        top: 0;
     }
 }
 
